fix: Java 8 compatibility for test files
- Add IoUtils utility class with readAllBytes for Java 8
- Replace Path.of() with Paths.get() (Java 8 compatible)
- Fix package names from demo.office.spreadsheet to cn.itcraft.jxlsb.example
- Add missing junit Test import in JxlsbSample1Test/JxlsbSample2Test